logs/dag_id=test_customers/run_id=scheduled__2023-11-08T000000+0000/task_id=create_customers_table/attempt=1.log
[2023-11-09T19:50:04.633+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: test_customers.create_customers_table scheduled__2023-11-08T00:00:00+00:00 [queued]>
[2023-11-09T19:50:04.650+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: test_customers.create_customers_table scheduled__2023-11-08T00:00:00+00:00 [queued]>
[2023-11-09T19:50:04.651+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-11-09T19:50:04.652+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 1
[2023-11-09T19:50:04.653+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-11-09T19:50:04.675+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_customers_table> on 2023-11-08 00:00:00+00:00
[2023-11-09T19:50:04.681+0000] {standard_task_runner.py:55} INFO - Started process 584 to run task
[2023-11-09T19:50:04.687+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_customers', 'create_customers_table', 'scheduled__2023-11-08T00:00:00+00:00', '--job-id', '265', '--raw', '--subdir', 'DAGS_FOLDER/test_customer.py', '--cfg-path', '/tmp/tmpkiz4m_gd']
[2023-11-09T19:50:04.689+0000] {standard_task_runner.py:83} INFO - Job 265: Subtask create_customers_table
[2023-11-09T19:50:04.805+0000] {task_command.py:389} INFO - Running <TaskInstance: test_customers.create_customers_table scheduled__2023-11-08T00:00:00+00:00 [running]> on host 706d03b983c6
[2023-11-09T19:50:05.166+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Tetiana
AIRFLOW_CTX_DAG_ID=test_customers
AIRFLOW_CTX_TASK_ID=create_customers_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-08T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-11-08T00:00:00+00:00
[2023-11-09T19:50:05.167+0000] {sql.py:253} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS customers (
            Index INT NOT NULL primary key,
            Customer_Id varchar(100),
            First_Name varchar(100),
            Last_Name varchar(100),
            
        );
    
[2023-11-09T19:50:05.194+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-11-09T19:50:05.590+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-11-09T19:50:05.594+0000] {sql.py:364} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS customers (
            Index INT NOT NULL primary key,
            Customer_Id varchar(100),
            First_Name varchar(100),
            Last_Name varchar(100),
            
        );
    , parameters: None
[2023-11-09T19:50:05.596+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:         );
                ^

[2023-11-09T19:50:05.626+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=test_customers, task_id=create_customers_table, execution_date=20231108T000000, start_date=20231109T195004, end_date=20231109T195005
[2023-11-09T19:50:05.658+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 265 for task create_customers_table (syntax error at or near ")"
LINE 8:         );
                ^
; 584)
[2023-11-09T19:50:05.708+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-11-09T19:50:05.749+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
